<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/card_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_name_text"/>

    <EditText
        android:id="@+id/card_number_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_number_text"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/billing_period_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/billing_period_header_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billing_period_text"/>

        <RadioButton android:id="@+id/billing_period_week_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billing_period_week_text"/>

        <RadioButton android:id="@+id/billing_period_month_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billing_period_month_text" />
    </RadioGroup>

    <EditText
        android:id="@+id/transaction_limit_total_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/transaction_limit_total_text"/>

    <EditText
        android:id="@+id/transaction_limit_count_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/transaction_limit_count_text"/>

    <CheckBox android:id="@+id/free_above_100_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free_above_100_text"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/card_cancel_btn"
            android:layout_height="50dip"
            android:layout_width="50dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/ic_cancel_black" />

        <ImageButton
            android:id="@+id/card_submit_btn"
            android:layout_height="50dip"
            android:layout_width="50dip"
            android:layout_toLeftOf="@id/card_cancel_btn"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_submit_black" />



    </LinearLayout>

</LinearLayout>


